# local-search

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: levenshtein.rs  lib.rs
test_app/: Cargo.toml  Makefile.toml  README.md
test_app/data/: cinemeta_20_000_unformatted.json
test_app/src/: lib.rs  localsearch_search_panel.rs
